# Chavruta.AI

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  NIGHT_WORK_SUMMARY.md  README.md  RESUME_LOCAL_LOAD.md  SESSION_SUMMARY_2026-07-12.md  SESSION_SUMMARY_2026-07-13.md  app.py  config.py  docker-compose.yml  pyproject.toml  requirements.txt  test_model.ipynb
.claude/: settings.json
.specify/: feature.json  init-options.json  integration.json
app/: api.py  db.py  streamlit_app.py
data/: lesson_templates.yaml
design/: 05-beit-midrash-modern-glass.html  README.md
docker/: Dockerfile.endpoint  Dockerfile.job  Dockerfile.web  nginx.conf  requirements.endpoint.txt  requirements.job.txt
docs/: CORPUS.md  DECISIONS.md  NEBIUS_HALACHA_JOB.md  PLAN.md  architecture.md  roadmap.md  schema_design.md
eval/: halacha_v1.jsonl  lessons_v1.jsonl  tanakh_v1.jsonl
lessons/: README.md
nebius/: endpoint.yaml  job.halacha.yaml  job.yaml
notebooks/: convert_dictalm_instruct_gguf_kaggle.ipynb  embed_corpus_colab.ipynb  embed_corpus_full_kaggle.ipynb  embed_corpus_hybrid_kaggle.ipynb  embed_gemara_kaggle.ipynb  embed_halacha_kaggle.ipynb  embed_mishnah_kaggle.ipynb  embed_pipeline_lightning.ipynb  embed_shut_kaggle.ipynb  embed_yerushalmi_kaggle.ipynb  kaggle_dataset_generator.py  kaggle_dataset_generator_v2.py  kaggle_dataset_generator_v3.py  kaggle_dataset_generator_v4.py  train_colab.ipynb  train_colab_FINAL.ipynb
scripts/: TRAIN_README.md  ask.py  backfill_search_he.py  bootstrap_rag.py  build_corpus_links.py  build_lesson.py  build_link_index.py  build_links.py  build_links_bulk.py  build_links_job.py  build_mixed_dataset.py  build_talmud_perek_index.py  build_training_data.py  build_vectordb.py  check_templates.py  clean_training_data.py  compact_docker_disk.ps1  create_payload_indexes.py  debug_api.py  diag_links.py  diag_mishnah.py  diag_opening.py  diag_retrieval.py  embed_corpus_gpu.py  eval.py  eval_recall.py  fetch_category.py  fetch_corpus.py  fetch_full_dynamic.py  fetch_gemara.py  fetch_halacha.py  fetch_mishnah.py  fetch_sefaria.py  fetch_shut.py  fix_daf_shift.py  gen_school_templates.py  generate_dataset.py  index_templates.py  (+28 more)
(+320 files in other folders)
